# oxide-server

./: .env.example  Cargo.toml  Dockerfile
.github/workflows/: drift-check.yml  main.yaml  pr.yaml
infra/: .terraform.lock.hcl  alloy.tf  cloudfront.tf  db.tf  elb.tf  image.tf  main.tf  monitoring.tf  service.tf  vpc.tf  waf.tf
monitoring/: grafana_dashboard.json
monitoring/alloy/: Dockerfile  config.alloy
src/: lib.rs  main.rs
src/data_store/: dynamodb.rs  in_memory.rs  mod.rs
tests/: collision_test.rs  datastore_error_test.rs  integration_test.rs
tests/common/: mod.rs
